--- a/index.html
+++ b/index.html
@@ -537,13 +537,27 @@
 
                 <div
                     class="p-5 bg-blue-50 dark:bg-blue-900 rounded-xl shadow-lg hover:shadow-xl transition duration-300">
-                    <svg class="w-8 h-8 text-blue-600 dark:text-blue-400 mx-auto mb-3" fill="none" stroke="currentColor"
-                        viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
-                    </svg>
-                    <h4 class="text-xl font-bold text-gray-900 dark:text-white">Media Sosial</h4>
-                    <p class="text-md text-gray-700 dark:text-gray-300">ch7676 (Instagram/X)</p>
+                    <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-3">Media Sosial</h4>
+
+                    <div class="flex justify-center space-x-4">
+                        <a href="https://www.instagram.com/ch7676" target="_blank" rel="noopener noreferrer"
+                            class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition duration-300 group flex flex-col items-center">
+                            <svg class="w-6 h-6 mb-1" fill="currentColor" viewBox="0 0 24 24">
+                                <path
+                                    d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.69 1.455 4.837 4.707.058 1.267.069 1.647.069 4.849 0 3.203-.012 3.584-.069 4.849-.147 3.252-1.585 4.706-4.837 4.837-1.266.058-1.647.069-4.849.069-3.203 0-3.584-.012-4.849-.069-3.252-.147-4.69-1.585-4.849-4.837-.058-1.267-.069-1.647-.069-4.849 0-3.203.012-3.584.069-4.849.148-3.252 1.585-4.69 4.849-4.837 1.266-.058 1.647-.069 4.849-.069zm0 2.163c-3.17 0-3.486.012-4.757.071-2.731.125-3.578.966-3.693 3.693-.059 1.271-.071 1.587-.071 4.757s.012 3.486.071 4.757c.115 2.727.962 3.568 3.693 3.693 1.271.059 1.587.071 4.757.071s3.486-.012 4.757-.071c2.731-.125 3.578-.966 3.693-3.693.059-1.271.071-1.587.071-4.757s-.012-3.486-.071-4.757c-.115-2.727-.962-3.568-3.693-3.693-1.271-.059-1.587-.071-4.757-.071zm0 2.916c2.427 0 4.391 1.964 4.391 4.391s-1.964 4.391-4.391 4.391-4.391-1.964-4.391-4.391 1.964-4.391 4.391-4.391zm0 2.163c-1.237 0-2.228.991-2.228 2.228s.991 2.228 2.228 2.228 2.228-.991 2.228-2.228-.991-2.228-2.228-2.228zm6.551-5.617c-.477 0-.854.377-.854.847 0 .469.377.847.854.847.476 0 .854-.377.854-.847 0-.47-.378-.847-.854-.847z" />
+                            </svg>
+                            <span class="text-sm font-semibold group-hover:underline">Instagram |</span>
+                        </a>
+
+                        <a href="https://x.com/ch7676" target="_blank" rel="noopener noreferrer"
+                            class="text-gray-700 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition duration-300 group flex flex-col items-center">
+                            <svg class="w-6 h-6 mb-1" fill="currentColor" viewBox="0 0 24 24">
+                                <path
+                                    d="M18.244 2.25h3.308l-7.227 8.261 8.503 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.719 6.237L18.244 2.25zm-2.917 17.513h1.273L5.415 4.195H4.142l11.185 15.568z" />
+                            </svg>
+                            <span class="text-sm font-semibold group-hover:underline">| X/Twitter</span>
+                        </a>
+                    </div>
                 </div>
             </div>
 
