--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3R: Reduce, Reuse, Recycle</title>
+    <link rel="Icon" href="./public/img/Icon.png">
     <link href="./src/css/main.css" rel="stylesheet">
     <script>
         if (localStorage.getItem('theme') === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
