--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3R: Reduce, Reuse, Recycle</title>
-    <link rel="Icon" href="./public/img/Icon.png">
+    <link rel="Icon" href="./public/img/icon.png">
     <link href="./src/css/main.css" rel="stylesheet">
     <script>
         if (localStorage.getItem('theme') === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -344,9 +344,9 @@
                 (bawah).
             </p>
 
-            <div class="grid lg:grid-cols-3 gap-10">
+            <div class="grid lg:grid-cols-2 gap-10">
 
-                <div id="recycle-text-content" class="lg:col-span-1">
+                <div id="recycle-text-content" class="lg:col-span-2">
                     <h3 class="text-xl lg:text-3xl font-bold text-gray-900 dark:text-white mb-4">Pengertian Recycle dan
                         Proses Kreatifnya</h3>
 
@@ -425,7 +425,7 @@
             </div>
             <h3 class="text-2xl font-bold text-gray-800 dark:text-white mb-4 text-center mt-8">Produk yang Dihasilkan:
             </h3>
-            <div class="output-slots grid grid-cols-3 md:grid-cols-6 gap-4">
+            <div class="output-slots-container grid grid-cols-2 md:grid-cols-4 gap-4">
                 <div id="output-slot-1" data-filled="false"
                     class="h-28 p-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 flex justify-center items-center text-center shadow-lg">
                     <p class="text-xs text-gray-500">Produk 1</p>
@@ -491,7 +491,7 @@
                     d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-7 13c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3-13H9V6c0-1.66 1.34-3 3-3s3 1.34 3 3v2z" />
             </svg>
 
-            <h3 class="text-4xl font-extrabold mb-4 text-red-500">⚠️ ARTIKEL TERKUNCI!</h3>
+            <h3 class="text-4xl text-center font-extrabold mb-4 text-red-500">⚠️ ARTIKEL TERKUNCI!</h3>
             <p class="text-xl text-center max-w-lg">
                 Selesaikan <b>semua tantangan</b> (Reduce, Reuse, & Recycle) untuk membuka Artikel Eksklusif ini dan
                 mendapatkan informasi lengkap tentang Misi 3R!
